Fix link-button vertical-align

--- a/assets/css/abstracts/_mixins.scss
+++ b/assets/css/abstracts/_mixins.scss
@@ -91,12 +91,15 @@
 	border: 0;
 	border-radius: 0;
 
-	color: inherit;
+	box-shadow: none;
+	display: inline;
+	font-family: inherit;
 	font-size: inherit;
 	font-weight: inherit;
 	letter-spacing: inherit;
 	text-decoration: underline;
 	text-transform: none;
+	vertical-align: baseline;
 
 	background: transparent;
 	&:hover,
